# CLI-Snake

./: .gitignore  CMakeLists.txt  Makefile  README.md  gmon.out  main  main.cpp  snake  snake.cpp  snake.txt
include/: Food.hpp  Game.hpp  Snake.hpp  Utils.hpp  auto.hpp  bfs.hpp  food.hpp  game.hpp  snake.hpp  utils.hpp
src/: Food.cpp  Game.cpp  Snake.cpp  Utils.cpp  auto.cpp  bfs.cpp  food.cpp  game.cpp  main.cpp  snake.cpp  utils.cpp
